# python-flattener

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/hello_pkg/mypkg/: __init__.py  __main__.py
examples/hello_requests/: localmod.py  main.py
python_flattener/: __init__.py  __main__.py  builder.py  cli.py  target.py
